--- a/scss/home.scss
+++ b/scss/home.scss
@@ -189,8 +189,9 @@
       }
       .eventRow {
         flex-direction: column;
-        align-items: flex-start;
+        width: 70%;
         margin-left: 40px;
+        align-items: flex-start;
         .eventHolder {
           margin-bottom: 20px;
         }
